samples/_failures_safe/1761392897_077b1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09bc788b.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_09bc788b.c:150:13: error: expected ‘,’ or ‘;’ at end of input
  150 |             for (int k = 0
      |             ^~~
./samples/SAFE/__tmp_09bc788b.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09bc788b.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09bc788b.c:150:13: error: expected declaration or statement at end of input
